--- a/client/app/views/doc.html
+++ b/client/app/views/doc.html
@@ -1,4 +1,4 @@
-<h3>التصرف في الأعوان
+<h3>التصرف في الأعوان (تحيين الوثائق)
    <small data-ng-bind="app.name + ' - ' + app.description"></small>
 </h3>
 
