--- a/client/app/views/af.html
+++ b/client/app/views/af.html
@@ -1,4 +1,4 @@
-<h3>التصرف في الأعوان (تحيين دورات تكوينية)
+<h3>التصرف في الأعوان (تحيين تعيين)
    <small data-ng-bind="app.name + ' - ' + app.description"></small>
 </h3>
 
@@ -12,22 +12,22 @@
 	               <table id="table-ext-3" class="table table-striped table-bordered table-hover">
 	                  <thead>
 	                     <tr>
-	                        <th>الشهادة</th>
-	                        <th>الصورة</th>
-	                        <th>من</th>
-	                        <th>إلى</th>
+	                        <th>الهيكل الرئيسي</th>
+	                        <th>الهيكل الفرعي 1</th>
+	                        <th>الهيكل الفرعي 2</th>
+	                        <th>تاريخ التفعيل</th>
 	                        <th>معطيات أخرى</th>
 	                        <th>#</th>
 	                     </tr>
 	                  </thead>
 	                  <tbody>
-	                     	<tr ng-repeat="c in certifs">
-							    <td>{{ c.title }}</td>
-							    <td> <img data-ng-src="{{ c.src }}" style="max-width:120px;" ></td>
-							    <td>{{c.f}}</td>
-							    <td>{{c.to}}</td>
-							    <td>{{c.ref}} </td>
-							    <td> <a ui-sref="app.editcertif({'cert':'{{id}}','nb':'{{$index}}' })" ><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a> </td>
+	                     	<tr ng-repeat="a in afs">
+							    <td>{{a.struct }}</td>
+							    <td>{{a.substruct }}</td>
+							    <td>{{a.subsubstruct }}</td>
+							    <td>{{a.dt }}</td>
+							    <td>{{a.ref}} </td>
+							    <td> <a ui-sref="app.editaff({'aff':'{{id}}','nb': '{{$index}}'} )" ><i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
 							</tr>
 	                  </tbody>
 	               </table>
@@ -40,7 +40,7 @@
 	                    <div class="input-group input-group-sm">
 	                        <input type="text" data-ng-model="uid" data-ng-pattern="/^[0-9]{10,12}$/i" class="form-control"   required  />
                            <span class="input-group-btn">
-                              <button type="button" data-ng-click="getU4cert()" class="btn btn-primary">بحث</button>
+                              <button type="button" data-ng-click="get4Aff()" class="btn btn-primary">بحث</button>
                            </span>
 	                    </div>
 	                </div>	
