--- a/client/app/views/dashboard.html
+++ b/client/app/views/dashboard.html
@@ -8,6 +8,7 @@
 </h3>
 <div data-ng-controller="DashboardController" class="row">
    <!-- START dashboard content-->
+   <p class="updown">Help Me</p>
    <div class="col-lg-9 fw-boxed">
       <div class="row">
          <div class="col-lg-4 col-lg-push-8">
